[project]
name = "conf_root"
version = "0.4.0"
description = "Default template for PDM package"
authors = [
    {name = "ciaranchen", email = "ciaranchen@qq.com"},
]
dependencies = [
    "ruamel-yaml>=0.18.6",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
