[project]
name = "conf_root"
version = "0.4.1"
description = "基于dataclass的科研配置文件取用工具"
authors = [
    {name = "ciaranchen", email = "ciaranchen@qq.com"},
]
dependencies = [
    "ruamel-yaml>=0.18.6",
    "wtforms>=3.1.2",
    "jinja2>=3.1.4",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true
name = "pip_conf_index_global"
